--- a/application/views/scss/components/_collection-product.scss
+++ b/application/views/scss/components/_collection-product.scss
@@ -1,120 +1,29 @@
-.ftshops {
-    &_item {
+.collection-shops {
+    &-item {
         background: #fff;
         display: flex;
-        flex-direction: row;
+        flex-flow: row wrap;
         justify-content: space-between;
-        grid-gap: 3rem;
+        gap: 3rem;
         padding: 2rem 0;
-        @include media-breakpoint-down(sm) {
-            flex-direction: column;
-        }
-
         &:nth-child(even) {
             flex-direction: row-reverse;
             @include media-breakpoint-down(sm) {
                 flex-direction: column;
             }
         }
-    }
-    .shop-detail-side {
-        text-align: center;
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex: 1;
-        max-width: 300px;
-        border: $border;
-        border-radius: $common-radius;
-        background-color: $bg-gray;
-        position: relative;
-        overflow: hidden;
-        @include media-breakpoint-down(lg) {
-            max-width: 260px;
-        }
-        @include media-breakpoint-down(sm) {
-            max-width: 100%;
-            margin-bottom: 1rem;
-        }
-        &:after {
-            box-sizing: content-box;
-            width: 0;
-            height: 12.5rem;
-            border: 180px solid $secondary-color;
-            border-top: 0 solid;
-            border-bottom: 35px solid rgba(0, 0, 0, 0);
-            color: rgba(0, 0, 0, 1);
-            text-overflow: clip;
-            position: absolute;
-            top: 0;
-            //content: "";
-        }
-        .products__rating {
-            justify-content: center;
-        }
-        .shop-detail-inner {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            position: relative;
-            z-index: 1;
+        .shop {
+            width: 100%;
+            @include media-breakpoint-up(lg) {
+                flex: 0 0 300px;
+                max-width: 300px;
+            }
         }
     }
     .product-wrapper {
         flex: 1;
-        border-radius: $common-radius;
-        @include media-breakpoint-down(md) {
-            //overflow-x: auto;
-        }
         .products {
             height: 100%;
-        }
-    }
-
-    &_logo {
-        background: #fff;
-        border-radius: 50%;
-        overflow: hidden;
-        width: 142px;
-        height: 142px;
-        aspect-ratio: 1/1;
-        margin: 20px auto;
-        position: relative;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.11);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        //padding: 1rem;
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-    &_detail {
-        font-size: 1rem;
-        margin-bottom: 1rem;
-    }
-
-    &_name {
-        font-size: 1.15em;
-        font-weight: 600;
-    }
-    &_location {
-        color: lighten($txt-body, 50%);
-        font-size: 0.9em;
-    }
-    &_body {
-        background: #fff;
-        .products {
-            float: left;
-            width: 50%;
-            padding: 20px;
-            border-#{$end-direction}: $border;
-            &:last-child {
-                border-#{$end-direction}: none;
-            }
         }
     }
 }
@@ -123,7 +32,6 @@
         flex-direction: column;
     }
 }
-
 .category-product-layout-1 {
     .products {
         height: 100%;
@@ -176,7 +84,6 @@
         }
     }
 }
-
 .product-layout-2 {
     display: grid;
     grid-gap: 1px;
@@ -223,7 +130,6 @@
         }
     }
 }
-
 .product-layout-3 {
     // max-width: 1000px;
     margin: auto;
@@ -305,7 +211,6 @@
         }
     }
 }
-
 .content-details {
     color: #fff;
     position: absolute;
